--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,6 +14,12 @@ updates:
     directory: "/frontend/" # Location of package manifests
     schedule:
       interval: "daily"
+ - package-ecosystem: "npm" # See documentation for possible values
+    directory: "/frontend/" # Location of package manifests
+    schedule:
+      interval: "daily"      
+    target-branch: "update-2021-03"
+
   - package-ecosystem: "gradle" # See documentation for possible values
     directory: "/backend/" # Location of package manifests
     schedule:
