--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -26,6 +26,10 @@ updates:
       interval: "daily"
 
   - package-ecosystem: "docker" # See documentation for possible values
-    directory: "/docker/" # Location of package manifests
+    directory: "/frontend/" # Location of package manifests
+    schedule:
+      interval: "daily"
+  - package-ecosystem: "docker" # See documentation for possible values
+    directory: "/backend/" # Location of package manifests
     schedule:
       interval: "daily"
